# immetaio

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
examples/: automatic_fileformat_detection.py  meta_io.py  multiple_images_directory.py  multiple_images_filenames.py  non_blocking_camera_capture.py  non_blocking_saving.py  non_blocking_saving2.py  single_image.py
src/arrayio/: array.py  array_meta.py  array_meta_nonblock.py  json.py  meta.py  params.py
src/immetaio/: __init__.py  array.py  array_meta.py  array_meta_dir.py  array_meta_multi.py  array_meta_nonblock.py  array_nonblock.py  json.py  master.py  params.py
